	
	* Util.py (gethostname): Remove Python 1.x support.

	* Defaults.py (CRYPT_KEY): Use binascii.unhexlify instead of 
	Util.unhexlify.
	
	* Cookie.py (confirmationmac): Use binascii.hexlify instead of
	Util.hexlify.
	
	(datemac): Ditto.

	(make_sender_cookie): Ditto.

	(make_keywordmac): Ditto.

	* Util.py: Remove hexlify and unhexlify functions; use the
	binascii module instead.

2002-01-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Add a new variable PARENTDIR that refers to the
	TMDA parent directory.  Used internally.

	* FilterParser.py (FilterParser.firstmatch): Add from/to-ezmlm
	rules to support matching from ezmlm `subscribers' directories
	which contain hash files of list subscriber addresses.

2002-01-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py: Remove the trailing space in the matches regex.

	(FilterParser.firstmatch): If the regex in headers-file or
	body-file includes quotes, extract the regex from the quotes
	before matching.  This is so the -file methods are consistent with
	headers and body.

2002-01-24  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Changed 'matches' regular expression to expect
	either single or double quotes as the delimiters for the 'headers'
	or 'body' filter sources.

	* (FilterParser.__parserule): Text matched by 'matches' now
	appears in either group 2 or group 3.
	
2002-01-24  Tim Legant  <tim@catseye.net>

	* FilterParser.py (FilterParser): Removed 'whitespace' and
	source_match regular expressions and added 'most_sources',
	'hdrbody_sources' and 'matches' regular expressions. Modified
	'tag_action' regular expression.
	
	* (FilterParser.__readrule): Changed whitespace collapse to simply
	substitue a space for every tab.

	* (FilterParser.__parserule): Rewrote to handle parenthesized
	regular expressions with embedded spaces (for the 'headers' and
	'body' sources).

	* (FilterParser.__adderror): Fixed massive bug. Should have been