@@ -3,6 +3,10 @@
 	* tmda-keygen (keygen): Use binascii.hexlify instead of
 	Util.hexlify.
 	
+2002-01-30  Tim Legant  <tim@catseye.net>
+
+	* paths.py: Also follow relative symlinks.
+
 2002-01-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* paths.py: Follow symlinks to find the true path.
